# local-console

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  _typos.toml  inno-setup.iss  mypy.ini  sonar-project.properties
local-console/: pyproject.toml  requirements.txt  setup.cfg
local-console/src/local_console/: __init__.py  __main__.py  plugin.py
local-console/src/local_console/assets/template/: Makefile  deployment.json
local-console/src/local_console/clients/: agent.py  listener.py  trio_paho_mqtt.py
local-console/src/local_console/commands/: broker.py  build.py  config.py  deploy.py  get.py  gui.py  logs.py  new.py  qr.py  rpc.py  start.py
local-console/src/local_console/core/: camera.py  config.py  enums.py
local-console/src/local_console/core/camera/: __init__.py  _shared.py  ai_model.py  enums.py  firmware.py  flatbuffers.py  mixin_mqtt.py  mixin_streaming.py  state.py  streaming.py
local-console/src/local_console/core/commands/: deploy.py  ota_deploy.py
local-console/src/local_console/core/schemas/: edge_cloud_if_v1.py  schemas.py
local-console/src/local_console/gui/: config.py  device_manager.py  driver.py  enums.py  main.py  schemas.py
local-console/src/local_console/gui/controller/: ai_model_screen.py  applications_screen.py  base_controller.py  configuration_screen.py  connection_screen.py  devices_screen.py  firmware_screen.py  home_screen.py  inference_screen.py  streaming_screen.py
local-console/src/local_console/gui/drawer/: objectdetection.py
local-console/src/local_console/gui/model/: ai_model_screen.py  applications_screen.py  base_model.py  (+8 more)
local-console/src/local_console/servers/: broker.py  webserver.py
local-console/src/local_console/utils/: _local_network.py  bindings.py  flatbuffers.py  fstools.py  local_network.py  logger.py  signature.py  timing.py  tls.py  tracking.py  validation.py
local-console/windows/: README.md  install.ps1  uninstall.ps1
local-console/windows/steps/: app.ps1  sys.ps1
local-console/windows/steps/vcredist/: Get-InstalledSoftware.ps1  Get-InstalledVcRedist.ps1
wedge-cli/: inno-setup.iss  pyinstaller.spec  requirements.txt  setup.cfg
wedge-cli/src/wedge_cli/: __init__.py  __main__.py
wedge-cli/src/wedge_cli/clients/: agent.py  listener.py  trio_paho_mqtt.py  webserver.py
wedge-cli/src/wedge_cli/commands/: broker.py  build.py  config.py  deploy.py  get.py  gui.py  logs.py  new.py  qr.py  rpc.py  start.py
wedge-cli/src/wedge_cli/core/: camera.py  config.py  edge_cloud_if_v1.py  enums.py  schemas.py
wedge-cli/src/wedge_cli/gui/: camera.py  config.py  driver.py  main.py  schemas.py  utils.py
wedge-cli/src/wedge_cli/servers/: broker.py  webserver.py
wedge-cli/src/wedge_cli/utils/: config.py  enums.py  flatbuffers.py  fswatch.py  local_network.py  logger.py  parser.py  pub_logs.json  schemas.py  tls.py  trio_paho_mqtt.py  validation.py  windows.py
wedge-cli/windows/: README.md  install.ps1  uninstall.ps1  utils.ps1  wedge_install.ps1  wedge_uninstall.ps1
wedge-cli/windows-build/: build_bundle.ps1
wedge-cli/windows/steps/: app.ps1  sys.ps1
(+258 files in other folders)
