[metadata]
name = local-console
version = 1.7.0
url = https://github.com/midokura/local-console
author = Midokura
author_email = engineering@midokura.com
classifiers =
    License :: Sony Semiconductor Solutions Corporation
    Operating System :: OS Independent
description = Local Console for camera operation
license_files = LICENSE

[options]
python_requires = >=3.10
package_dir=
    =src
packages=find:
install_requires = file: requirements.txt
include_package_data=True

[options.package_data]
local_console =
    assets/**
    gui/assets/**
* = *.kv

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    local-console = local_console.__main__:app
