[metadata]
name = wedge-cli
version = 1.6.12
url = https://github.com/midokura/wedge-cli
author = Midokura
author_email = engineering@midokura.com
classifiers =
    License :: Sony Semiconductor Solutions Corporation
    Operating System :: OS Independent
description = CLI for Wedge-Agent
license_files = LICENSE

[options]
python_requires = >=3.10
package_dir=
    =src
packages=find:
install_requires = file: requirements.txt
include_package_data=True

[options.package_data]
wedge_cli =
    assets/**
    gui/assets/**
* = *.kv

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    wedge-cli = wedge_cli.__main__:app
